--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
             <version>3.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>15.0-rc1</version>
+        </dependency>
+
+
     </dependencies>
 
     <profiles>
