--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <version>15.0-rc1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-maven-plugin</artifactId>
+            <version>4.5.1-1</version>
+        </dependency>
 
     </dependencies>
 
