--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,18 @@
             <version>4.5.1-1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom2</artifactId>
+            <version>2.0.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.1</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
