--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
             <version>1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.airlift</groupId>
+            <artifactId>airline</artifactId>
+            <version>0.7</version>
+        </dependency>
+
+
     </dependencies>
 
     <profiles>
