--- a/pom.xml
+++ b/pom.xml
@@ -62,11 +62,16 @@
         </dependency>
 
         <dependency>
-            <groupId>io.airlift</groupId>
+            <groupId>com.github.rvesse</groupId>
             <artifactId>airline</artifactId>
-            <version>0.7</version>
+            <version>2.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sourceforge.argparse4j</groupId>
+            <artifactId>argparse4j</artifactId>
+            <version>0.7.0</version>
+        </dependency>
 
     </dependencies>
 
