--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 ### Java template
-*.class
-
+.idea
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+
 # Package Files #
+*.class
 *.jar
 *.war
 *.ear
@@ -13,3 +14,4 @@
 hs_err_pid*
 
 # Created by .ignore support plugin (hsz.mobi)
+/.gitignore
