--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
             <version>2.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>5.13.0</version>
+        </dependency>
 
     </dependencies>
 
