--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,12 @@
 *.jar
 *.war
 *.ear
+*.iml
 .idea/*
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+target/
 
 # Created by .ignore support plugin (hsz.mobi)
 /.gitignore
