--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
             <version>5.13.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-core</artifactId>
+            <version>1.5.0.final</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
