--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,18 @@
             <version>1.5.0.final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-spring</artifactId>
+            <version>1.5.0.final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-indexing</artifactId>
+            <version>1.5.0.final</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
