--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,15 @@
             <version>1.5.0.final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.gemstone.gemfire</groupId>
+            <artifactId>gemfire</artifactId>
+            <version>8.2.0</version>
+        </dependency>
+
     </dependencies>
+
+
 
     <profiles>
         <profile>
