--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,13 @@
 
     </dependencies>
 
-
+    <repositories>
+        <repository>
+            <id>gemfire-repository</id>
+            <name>Gemfire Repository</name>
+            <url>http://dist.gemstone.com/maven/release</url>
+        </repository>
+    </repositories>
 
     <profiles>
         <profile>
