--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,14 @@
             <scope>compile</scope>
         </dependency>
 
+
+        <!-- http://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.7</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
