--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast-client</artifactId>
-            <version>3.7-SNAPSHOT</version>
+            <version>3.7-EA</version>
         </dependency>
 
         <dependency>
