--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
             <version>5.13.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-core</artifactId>
+            <version>5.7.0</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>org.apache.ignite</groupId>
