--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 
         <dependency>
             <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-all</artifactId>
+            <artifactId>activemq-client</artifactId>
             <version>5.13.3</version>
         </dependency>
 
