--- a/stash/log4j.properties
+++ b/stash/log4j.properties
@@ -25,4 +25,4 @@ log4j.logger.com.hazelcast.test.mocknetwork=DEBUG
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%5p | %m%n
-log4j.appender.console.threshold=INFO
+log4j.appender.console.threshold=DEBUG
