--- a/stash/log4j.properties
+++ b/stash/log4j.properties
@@ -1,5 +1,5 @@
 
-log4j.rootLogger=DEBUG, console
+log4j.rootLogger=INFO, console
 log4j.logger.org.apache.activemq.spring=WARN
 log4j.logger.org.apache.activemq.web.handler=WARN
 log4j.logger.org.springframework=WARN
@@ -13,6 +13,7 @@ log4j.logger.com.hazelcast.internal.cluster=DEBUG
 log4j.logger.com.hazelcast.internal.partition=DEBUG
 log4j.logger.com.hazelcast.spi.hotrestart=DEBUG
 log4j.logger.com.hazelcast.test.mocknetwork=DEBUG
+log4j.logger.com.hazelcast.memory=DEBUG
 
 # When debugging or reporting problems to the ActiveMQ team,
 # comment out the above lines and uncomment the next.
