--- a/stash/log4j.properties
+++ b/stash/log4j.properties
@@ -12,4 +12,4 @@ log4j.logger.com.hazelcast.spi.hotrestart=info
 log4j.logger.com.hazelcast.test.mocknetwork=debug
 log4j.logger.com.hazelcast.memory=debug
 
-log4j.rootLogger=info, stdout
+log4j.rootLogger=OFF, stdout
