--- a/stash/log4j.properties
+++ b/stash/log4j.properties
@@ -12,4 +12,4 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p |%X{test-name}| 
 #log4j.logger.com.hazelcast.test.mocknetwork=debug
 #log4j.logger.com.hazelcast.memory=debug
 
-log4j.rootLogger=OFF, stdout
+log4j.rootLogger=info, stdout
