--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,13 @@
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast</artifactId>
-            <version>3.8-SNAPSHOT</version>
+            <version>3.7</version>
         </dependency>
 
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast-client</artifactId>
-            <version>3.7-EA</version>
+            <version>3.7</version>
         </dependency>
 
         <dependency>
