--- a/pom.xml
+++ b/pom.xml
@@ -12,21 +12,22 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.coherence</groupId>
-            <artifactId>coherence</artifactId>
-            <version>12.2.1</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast</artifactId>
-            <version>3.8-SNAPSHOT</version>
+            <version>3.8-EA</version>
         </dependency>
 
         <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast-client</artifactId>
-            <version>3.8-SNAPSHOT</version>
+            <version>3.8-EA</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.coherence</groupId>
+            <artifactId>coherence</artifactId>
+            <version>12.2.1</version>
         </dependency>
 
         <dependency>
